// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createRedirectPageContent should encode uri special chars 1`] = `
"<!DOCTYPE html>
<html>
  <head>
    <meta charset=\\"UTF-8\\">
    <meta http-equiv=\\"refresh\\" content=\\"0; url=https://docusaurus.io/gr/%CF%83%CE%B5%CE%BB%CE%B9%CE%B4%CE%B1%CF%82/\\">
  </head>
  <script>
    window.location.href = 'https://docusaurus.io/gr/%CF%83%CE%B5%CE%BB%CE%B9%CE%B4%CE%B1%CF%82/';
  </script>
</html>"
`;

exports[`createRedirectPageContent should match snapshot 1`] = `
"<!DOCTYPE html>
<html>
  <head>
    <meta charset=\\"UTF-8\\">
    <meta http-equiv=\\"refresh\\" content=\\"0; url=https://docusaurus.io/\\">
  </head>
  <script>
    window.location.href = 'https://docusaurus.io/';
  </script>
</html>"
`;
